--- a/Vignette/Vignette.Rmd
+++ b/Vignette/Vignette.Rmd
@@ -212,7 +212,9 @@ sim_data <- simulate_validatedData(
 )
 ```
 
-Note that we specified the design type through the argument `design_type = "FixedPercent"`, with the possible scenarios defined by `scenarios = c(0.05, 0.1, 0.15, 0.3, 0.5)`. These two arguments specify the set of alternative validation designs we will compare in our simulation study. Under the first validation design, 5% of recordings from the first visit to a site are validated, while in the second validation design 10% of recordings from the first visit to a site are validated, and so on.
+Note that we specified the design type through the argument `design_type = "FixedPercent"`, with the possible scenarios defined as the vector `scenarios = c(0.05, 0.1, 0.15, 0.3, 0.5)`. These two arguments specify the set of alternative validation designs we will compare in our simulation study. Under the first validation design, 5% of recordings from the first visit to a site are validated, while in the second validation design 10% of recordings from the first visit to a site are validated, and so on.
+
+Note that when specifying a stratified-by-species design as in the main text, `simulate_validatedData` expects that the argument `scenarios` to be a list of proportions corresponding to the possible levels of effort for each species. Additionally, note that `simulate_validatedData` considers all possible combinations of the various levels of effort for each species, meaning that the number of simulated scenarios (and the computation time to run a full simulation study) can grow quickly.
 
 To understand the output from `simulate_validatedData`, we can investigate `sim_data`. The output is a list, containing three objects:
 
@@ -425,7 +427,7 @@ As a final point, we emphasize that results from any simulation study -- includi
 
 Our hope is that `ValidationExplorer` provides a useful set of tools that allow monitoring programs to make informed decisions prior to the manual review stage of the bioacoustic workflow. By assessing the merits of various validation designs through simulation, effort can be thoughtfully assigned based on program goals and monitoring objectives.
 
-## Table of Functionality 
+## Table of Functionality
 
 \singlespacing
 \begin{longtable}{p{0.27\linewidth}p{0.32\linewidth}p{0.33\linewidth}}
