--- a/Vignette/Vignette.bib
+++ b/Vignette/Vignette.bib
@@ -127,3 +127,14 @@ doi = {10.1080/10618600.2016.1172487},
 URL = {https://doi.org/10.1080/10618600.2016.1172487},
 eprint = {https://doi.org/10.1080/10618600.2016.1172487}
 }
+
+@Article{bayesplot,
+    title = {Visualization in Bayesian workflow},
+    author = {Jonah Gabry and Daniel Simpson and Aki Vehtari and Michael Betancourt and Andrew Gelman},
+    year = {2019},
+    journal = {J. R. Stat. Soc. A},
+    volume = {182},
+    issue = {2},
+    pages = {389-402},
+    doi = {10.1111/rssa.12378},
+  }
